src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AcceptanceDate__c</fullName>
        <label>Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <displayFormat>ACC-{00000000}</displayFormat>
        <label>Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Link__c</fullName>
        <label>Account Manager Link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_from_Lead__c</fullName>
        <label>Address from Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Amount__c</fullName>
        <label>Bill Amount</label>
        <summarizedField>Agreement__c.Advance_Frequency_months__c</summarizedField>
        <summaryForeignKey>Agreement__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Barangay__c</fullName>
        <description>Billing address barangay</description>
        <inlineHelpText>Billing address barangay</inlineHelpText>
        <label>Barangay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_City_Municipal__c</fullName>
        <description>Billing address city / municipal</description>
        <inlineHelpText>Billing address city / municipal</inlineHelpText>
        <label>City / Municipality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cainta</fullName>
                </value>
                <value>
                    <fullName>Makati City</fullName>
                </value>
                <value>
                    <fullName>Mandaluyong</fullName>
                </value>
                <value>
                    <fullName>Manila City</fullName>
                </value>
                <value>
                    <fullName>Pasig City</fullName>
                </value>
                <value>
                    <fullName>Pateros</fullName>
                </value>
                <value>
                    <fullName>Q. C.-Kaunlaran Dist 4</fullName>
                </value>
                <value>
                    <fullName>San Juan</fullName>
                </value>
                <value>
                    <fullName>Taguig City</fullName>
                </value>
                <value>
                    <fullName>Taytay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address_Province__c</fullName>
        <description>Billing address province</description>
        <inlineHelpText>Billing address province</inlineHelpText>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Metro Manila</fullName>
                    <default>true</default>
                    <label>Metro Manila</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address_Street_Name__c</fullName>
        <description>Billing address street name</description>
        <inlineHelpText>Billing address street name</inlineHelpText>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Street_No__c</fullName>
        <description>Billing address street no</description>
        <inlineHelpText>Billing address street no</inlineHelpText>
        <label>House #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Subdivision__c</fullName>
        <description>Billing address subdivision</description>
        <inlineHelpText>Billing address subdivision</inlineHelpText>
        <label>Subdivision / Bldg Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Unit_No__c</fullName>
        <description>Billing address unit no</description>
        <inlineHelpText>Billing address unit no</inlineHelpText>
        <label>Unit #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_Manager_of_Account_Owner_L2__c</fullName>
        <formula>Owner.Manager.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager of Account Owner_L2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Manager_of_Account_Owner_L3__c</fullName>
        <formula>Owner.Manager.Manager.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager of Account Owner_L3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Manager_of_Account_Owner_L4__c</fullName>
        <formula>Owner.Manager.Manager.Manager.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager of Account Owner_L4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_PersonEmail__c</fullName>
        <label>CXE_PersonEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CXE_trigger_CBG_RM_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CXE_trigger_CBG_RM_email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChurnRiskSegment__c</fullName>
        <label>Churn Risk Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChurnRisk__c</fullName>
        <label>Churn Risk</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Code_Customer_Type__c</fullName>
        <label>Code_Customer_Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Salutation__c</fullName>
        <label>Code Salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conglomerate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conglomerate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CorporateLanguage__c</fullName>
        <label>Corporate Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CountryOfOrigin__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Cantonese Uyghur</fullName>
                </value>
                <value>
                    <fullName>Tibetan</fullName>
                </value>
                <value>
                    <fullName>Mongolian</fullName>
                </value>
                <value>
                    <fullName>Zhuang</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Gujarati</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Kannada</fullName>
                </value>
                <value>
                    <fullName>Marathi</fullName>
                </value>
                <value>
                    <fullName>Tamil</fullName>
                </value>
                <value>
                    <fullName>Urdu</fullName>
                </value>
                <value>
                    <fullName>Gaelic</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountOfOpportunities__c</fullName>
        <label>Count Of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfWonOpportunities__c</fullName>
        <label>Count Of Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountryOfOrigin__c</fullName>
        <label>Country Of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>United States of America</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Liechtenstein</fullName>
                </value>
                <value>
                    <fullName>Lithuania</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditScoreImg__c</fullName>
        <formula>IF( CreditScore__c = 1,IMAGE(&quot;/resource/CreditScore/CreditScore/10.png&quot;, &quot;1&quot;,60,60),
IF( CreditScore__c = 2,IMAGE(&quot;/resource/CreditScore/CreditScore/20.png&quot;, &quot;2&quot;,60,60),
IF( CreditScore__c = 3,IMAGE(&quot;/resource/CreditScore/CreditScore/30.png&quot;, &quot;3&quot;,60,60),
IF( CreditScore__c = 4,IMAGE(&quot;/resource/CreditScore/CreditScore/40.png&quot;, &quot;4&quot;,60,60),
IF( CreditScore__c = 5,IMAGE(&quot;/resource/CreditScore/CreditScore/50.png&quot;, &quot;5&quot;,60,60),
IF( CreditScore__c = 6,IMAGE(&quot;/resource/CreditScore/CreditScore/60.png&quot;, &quot;6&quot;,60,60),
IF( CreditScore__c = 7,IMAGE(&quot;/resource/CreditScore/CreditScore/70.png&quot;, &quot;7&quot;,60,60),
IF( CreditScore__c = 8,IMAGE(&quot;/resource/CreditScore/CreditScore/80.png&quot;, &quot;8&quot;,60,60),
IF( CreditScore__c = 9,IMAGE(&quot;/resource/CreditScore/CreditScore/90.png&quot;, &quot;9&quot;,60,60),
IF( CreditScore__c = 10,IMAGE(&quot;/resource/CreditScore/CreditScore/100.png&quot;, &quot;10&quot;,60,60),
IF( CreditScore__c = 0,IMAGE(&quot;/resource/CreditScore/CreditScore/0.png&quot;, &quot;0&quot;,60,60),


IMAGE(&quot;/resource/CreditScore/CreditScore/0.png&quot;, &quot;0&quot;,60,60)
)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <label>Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentFinancialBalance__c</fullName>
        <label>Current Financial Balance</label>
        <summarizedField>Invoice__c.Invoice_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Payment_status__c</field>
            <operation>notEqual</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CustomerAcceptanceImg__c</fullName>
        <formula>IMAGE( 
case( Customer_Accepted__c, 
&quot;Accepted&quot;, &quot;/resource/CustomerAcceptance/CustomerAcceptance/Accepted.png&quot;,

&quot;Accepted under conditions&quot;,&quot;/resource/CustomerAcceptance/CustomerAcceptance/AcceptedUnderCircumstances.png&quot;,
&quot;Rejected&quot;, &quot;/resource/CustomerAcceptance/CustomerAcceptance/Rejected.png&quot;, 
Null),
 
&quot;statuscolor&quot;,25,25)</formula>
        <label>Customer Acceptance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerValueImg__c</fullName>
        <formula>IMAGE( 
CASE(CustomerValue__c, 

&quot;Bronze&quot;, &quot;/resource/CustomerValueImage/CustomerValueImage/CustomerValue1.png&quot;,
&quot;Silver&quot;,&quot;/resource/CustomerValueImage/CustomerValueImage/CustomerValue2.png&quot;,
&quot;Gold&quot;, &quot;/resource/CustomerValueImage/CustomerValueImage/CustomerValue3.png&quot;, 
&quot;Platinum&quot;,&quot;/resource/CustomerValueImage/CustomerValueImage/CustomerValue4.png&quot;, 
&quot;Diamond&quot;, &quot;/resource/CustomerValueImage/CustomerValueImage/CustomerValue5.png&quot;, 
&quot;/resource/CustomerValueImage/CustomerValueImage/CustomerValue0.png&quot;), 

&quot;rating&quot;,60,60)</formula>
        <label>Customer Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerValueScore__c</fullName>
        <formula>if( NoOfActiveAgreements__c = 1,+1,0)+if( NoOfActiveAgreements__c = 2,+2,0)+if( NoOfActiveAgreements__c = 3,+3,0)+if( NoOfActiveAgreements__c &gt;= 4,+4,0)+if(NoOfDaysSinceLastActivity__c&lt;30,+1,0)+if( NoOfDaysSinceLastActivity__c&gt; 30 &amp;&amp; NoOfDaysSinceLastActivity__c&lt;= 60,+2,0)+if(NoOfDaysSinceLastActivity__c&gt; 60 &amp;&amp; NoOfDaysSinceLastActivity__c&lt;= 120,+3,0)+if(NoOfDaysSinceLastActivity__c&gt; 120,+4,0)+if( TotalValueOfWonOpportunities__c &lt; 500,+1,0)+if(TotalValueOfWonOpportunities__c &gt; 500 &amp;&amp; TotalValueOfWonOpportunities__c &lt;= 1000,+2,0)+if(TotalValueOfWonOpportunities__c &gt; 1000 &amp;&amp; TotalValueOfWonOpportunities__c &lt;= 5000,+3,0)+if(TotalValueOfWonOpportunities__c &gt; 5000,+4,0)+if( CreditScore__c&lt;500,+1,0)+if(CreditScore__c&gt;500 &amp;&amp; CreditScore__c &lt; 600,+2,0)+if(CreditScore__c&gt;600 &amp;&amp; CreditScore__c &lt;= 650,+3,0)+if(CreditScore__c&gt;650,+4,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Value Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerValue__c</fullName>
        <label>Customer Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diamond</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Accepted__c</fullName>
        <description>This field indicates whether a customer is accepted or not.</description>
        <label>Customer Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Accepted under Conditions</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>GHMSCI</fullName>
                </value>
                <value>
                    <fullName>Flat Streetlights</fullName>
                </value>
                <value>
                    <fullName>Company Use</fullName>
                </value>
                <value>
                    <fullName>Residential Service</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Gen Service A</fullName>
                </value>
                <value>
                    <fullName>Non-Industrial Service</fullName>
                </value>
                <value>
                    <fullName>Industrial Service</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Sunpower</fullName>
                </value>
                <value>
                    <fullName>Subtransmission Assets</fullName>
                </value>
                <value>
                    <fullName>Meralco Use</fullName>
                </value>
                <value>
                    <fullName>GS-B Industrial Service</fullName>
                </value>
                <value>
                    <fullName>GS-B Non Industrial Service</fullName>
                </value>
                <value>
                    <fullName>OARC Industrial Service</fullName>
                </value>
                <value>
                    <fullName>OARC Non-Industrial Service</fullName>
                </value>
                <value>
                    <fullName>OARC GHMSCI</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>National Government</fullName>
                </value>
                <value>
                    <fullName>Local Government</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DatOfLastWonDeal__c</fullName>
        <label>Date Of Last Won Deal</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysSinceLastActivity__c</fullName>
        <formula>IF(TODAY() = LastActivityDate, &quot;Today&quot;, IF(ISBLANK(LastActivityDate),&quot;Never&quot;, TEXT(TODAY()-LastActivityDate) &amp; &quot; Days Ago&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysSinceLastWonDeal__c</fullName>
        <formula>IF(TODAY() =  DatOfLastWonDeal__c , &quot;Today&quot;, IF(ISBLANK(DatOfLastWonDeal__c),&quot;Never&quot;, TEXT(TODAY()-DatOfLastWonDeal__c) &amp; &quot; Days Ago&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysSinceLastWonDeal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Charge__c</fullName>
        <label>Distribution Charge</label>
        <summarizedField>Agreement__c.Agreement_Duration_Months__c</summarizedField>
        <summaryForeignKey>Agreement__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <label>Doing Business As</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPAccountID__c</fullName>
        <externalId>true</externalId>
        <label>ERP Account ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Primary Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Sales__c</fullName>
        <label>Energy Sales</label>
        <summarizedField>Agreement__c.Advance_amount__c</summarizedField>
        <summaryForeignKey>Agreement__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EnterpriseNumber__c</fullName>
        <externalId>true</externalId>
        <label>Registration Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntitlementIDPopulated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entitlement ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EntitlementID__c</fullName>
        <label>Entitlement ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Process_ID__c</fullName>
        <label>Entitlement Process ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Name__c</fullName>
        <description>Facebook Name for SCS</description>
        <label>Facebook Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidance__c</fullName>
        <formula>IF(ISPICKVAL(StageStatus__c,&quot;New&quot;),&apos;Complete data &amp; press &quot;Validate&quot; button to start validation.&apos;,
IF(ISPICKVAL(StageStatus__c,&quot;Validated&quot;),&apos;Press &quot;Accept&quot; button to start customer acceptation.&apos;,
IF(ISPICKVAL(StageStatus__c,&quot;Accepted&quot;)||ISPICKVAL(StageStatus__c,&quot;Lost Customer&quot;),&apos;Specify opportunity &amp; quote and send them to the customer.&apos;,
IF(ISPICKVAL(StageStatus__c,&quot;Quote Presented&quot;),&apos;No actions. Waiting for customer.&apos;,
IF(ISPICKVAL(StageStatus__c,&quot;Pending Security Deposit&quot;),&apos;No actions. Waiting for customer to deposit security deposit.&apos;,
IF(ISPICKVAL(StageStatus__c,&quot;Cooling Off Period&quot;),&apos;No actions. Waiting for cooling-off period to end.&apos;,
&apos;No actions: Waiting for delivery to start&apos;))))))</formula>
        <label>Guidance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HousingSituation__c</fullName>
        <label>Housing Situation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Owner</fullName>
                </value>
                <value>
                    <fullName>Rented through Agency</fullName>
                </value>
                <value>
                    <fullName>Rented through Landloord</fullName>
                </value>
                <value>
                    <fullName>Private arrangement</fullName>
                </value>
                <value>
                    <fullName>Council Property</fullName>
                </value>
                <value>
                    <fullName>Housing association</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industries__c</fullName>
        <label>Industry/ies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>